inventory service added

--- a/Microservices/order-service/docker-compose.yml
+++ b/Microservices/order-service/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   mysql:
     image: mysql:8.0
-    container_name: mysql-db
+    container_name: order-service-mysql
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: root
