--- a/Microservices/inventory-service/docker-compose.yml
+++ b/Microservices/inventory-service/docker-compose.yml
@@ -8,5 +8,5 @@ services:
     ports:
       - "3308:3306"
     volumes:
-      - ./mysql:/var/lib/mysql
+      - ./mysql/inventory:/var/lib/mysql
       - ./docker/mysql/init.sql:/docker-entrypoint-initdb.d/init.sql
