--- a/Microservices/order-service/docker-compose.yml
+++ b/Microservices/order-service/docker-compose.yml
@@ -8,5 +8,5 @@ services:
     ports:
       - "3307:3306"
     volumes:
-      - ./mysql:/var/lib/mysql
+      - ./mysql/order:/var/lib/mysql
       - ./docker/mysql/init.sql:/docker-entrypoint-initdb.d/init.sql
