added feature to Inventory Service

--- a/Microservices/inventory-service/.gitignore
+++ b/Microservices/inventory-service/.gitignore
@@ -19,6 +19,9 @@ target/
 *.iml
 *.ipr
 
+# Ignore MySQL data directory
+Microservices/inventory-service/mysql/
+
 ### NetBeans ###
 /nbproject/private/
 /nbbuild/
