--- a/Microservices/inventory-service/src/main/resources/application.properties
+++ b/Microservices/inventory-service/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=inventory-service
 spring.datasource.url=jdbc:mysql://localhost:3308/inventory_service
 spring.datasource.username=root
 spring.datasource.password=root
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 server.port=8083
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
