--- a/Microservices/product-service/src/main/resources/application.properties
+++ b/Microservices/product-service/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.application.name=product-service
 spring.data.mongodb.uri=mongodb://root:password@localhost:8087/product-service?authSource=admin
+server.port=8080
+#Spring doc swagger UI path
+springdoc.api-docs.path=/swagger-ui.html
