--- a/Microservices/api-gateway/src/main/resources/application.properties
+++ b/Microservices/api-gateway/src/main/resources/application.properties
@@ -1,2 +1,35 @@
 spring.application.name=api-gateway
 server.port=9000
+
+#spring.cloud.gateway.routes[0].id=inventory-service
+#spring.cloud.gateway.routes[0].uri=http://localhost:8083
+#spring.cloud.gateway.routes[0].predicates[0]=Path=/inventory/**
+
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.api-docs.path=/api-docs
+
+springdoc.swagger-ui.urls[0].name=Inventory Service
+springdoc.swagger-ui.urls[0].url=/aggregate/inventory-service/v3/api-docs
+
+springdoc.swagger-ui.urls[1].name=Order Service
+springdoc.swagger-ui.urls[1].url=/aggregate/order-service/v3/api-docs
+
+springdoc.swagger-ui.urls[2].name=Product Service
+springdoc.swagger-ui.urls[2].url=/aggregate/product-service/v3/api-docs
+
+#Actuator Endpoints
+management.health.circuitbreakers.enabled=true
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+
+#Resilance4j Properties
+resilience4j.circuitbreaker.configs.default.registerHealthIndicator=true
+resilience4j.circuitbreaker.configs.default.slidingWindowType=COUNT_BASED
+resilience4j.circuitbreaker.configs.default.slidingWindowSize=10
+resilience4j.circuitbreaker.configs.default.failureRateThreshold=50
+resilience4j.circuitbreaker.configs.default.withDurationOfOpenState=5s
+resilience4j.circuitbreaker.configs.default.permittedNumberOfCallsInHalfOpenState=3
+resilience4j.circuitbreaker.configs.default.automaticTransitionFromOpenToHalfOpenEnabled=true
+
+#Resilance4J Timeout Properties
+resilience4j.timelimiter.configs.default.timeoutDuration=3s
