--- a/Microservices/inventory-service/src/main/resources/application.properties
+++ b/Microservices/inventory-service/src/main/resources/application.properties
@@ -7,3 +7,5 @@ server.port=8083
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.api-docs.path=/api-docs
