--- a/Microservices/api-gateway/src/main/resources/application.properties
+++ b/Microservices/api-gateway/src/main/resources/application.properties
@@ -30,6 +30,11 @@ resilience4j.circuitbreaker.configs.default.failureRateThreshold=50
 resilience4j.circuitbreaker.configs.default.withDurationOfOpenState=5s
 resilience4j.circuitbreaker.configs.default.permittedNumberOfCallsInHalfOpenState=3
 resilience4j.circuitbreaker.configs.default.automaticTransitionFromOpenToHalfOpenEnabled=true
+resilience4j.circuitbreaker.configs.default.minimumNumberOfCalls=5
 
 #Resilance4J Timeout Properties
 resilience4j.timelimiter.configs.default.timeoutDuration=3s
+
+#Resilance4j Retry Properties
+resilience4j.retry.configs.default.maxRetryAttempts=3
+resilience4j.retry.configs.default.waitDuration=2s
